--- a/html/popup.html
+++ b/html/popup.html
@@ -9,19 +9,19 @@
 <!--License notice-->
 <script src="../js-src/license.js"></script>
 
-<!--Tweet NaCl crypto library by Dmitry Chestnykh. https://github.com/dchest/tweetnacl-js-->
+<!--TweetNaCl crypto library 1.0.1 by Dmitry Chestnykh. https://github.com/dchest/tweetnacl-js-->
 <script src="../js-lib/nacl.js"></script>
 
-<!--ed2curve-js conversion of curve coordinates by Dmitry Chestnykh. https://github.com/dchest/ed2curve-js-->
+<!--ed2curve-js conversion of curve coordinates 0.2.1 by Dmitry Chestnykh. https://github.com/dchest/ed2curve-js-->
 <script src="../js-lib/ed2curve.js"></script>
 
-<!--scrypt-async-js KDF by Dmitry Chestnykh. https://github.com/dchest/scrypt-async-js-->
+<!--scrypt-async-js KDF 2.0.1 by Dmitry Chestnykh. https://github.com/dchest/scrypt-async-js-->
 <script src="../js-lib/scrypt-async.js"></script>
 
-<!--lz-string compression algorithm. https://github.com/pieroxy/lz-string-->
+<!--lz-string compression algorithm 1.4.4. https://github.com/pieroxy/lz-string-->
 <script src="../js-lib/lz-string.js"></script>
 
-<!--dompurify, used to sanitize decrypted material before putting in DOM. https://github.com/cure53/DOMPurify-->
+<!--dompurify, used to sanitize decrypted material before putting in DOM v2.0.7. https://github.com/cure53/DOMPurify-->
 <script src="../js-lib/purify.js"></script>
 
 <!--jpeg image steganography by Owen Campbell-Moore and others. https://github.com/owencm/js-steg. First jsstegencoder-1.0.js-->
@@ -33,8 +33,11 @@
 <!--jssteg-1.0.js-->
 <script src="../js-lib/jssteg.js"></script>
 
-<!--isaac seedable PRNG by Yves-Marie Rinquin. https://github.com/rubycon/isaac.js/blob/master/isaac.js-->
+<!--isaac seedable PRNG by Yves-Marie Rinquin. https://github.com/rubycon/isaac.js-->
 <script src="../js-lib/isaac.js"></script>
+
+<!--this used to be in TweetNaCl, but they dropped it-->
+<script src="../js-src/nacl-util.js"></script>
 
 <!--this only loads two word arrays: wordlist and blacklist-->
 <script src="../js-src/dictionary_en.js"></script>
@@ -242,7 +245,7 @@
 			<button class="cssbutton" id="suggestPwdBtn" value="Suggest" title="suggest a Password made of five common words">Suggest</button>&nbsp;&nbsp;
            <button class="cssbutton" id="keyHelpBtn" value="Help" title="open Help in a new tab">Help</button><br></div><br>
 		</div>
-	<div id="pwdMsg" class="message" align="center">Welcome to PassLok for Email<br>Please check that your email address is correct and enter your Password below</div>
+	<div id="pwdMsg" class="message" align="center">Welcome to PassLok Universal<br>Please check that your email address is correct and enter your Password below</div>
     <br>
     <input type="text" class="cssbox" autocomplete="off" id="myEmailBox" name="text" placeholder="Email address" title="this should be your email address, or your name for Outlook online" align="center"><br><br>
 	<input type="password" class="cssbox" autocomplete="off" id="pwdBox" name="text" placeholder="Enter your Password here" title="enter your Password here" align="center">
